Describe roster and roster-file options different way

--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -28,8 +28,8 @@ As with all Salt calls, {productname} invokes `salt-ssh` via the `salt-api`.
 
 Salt SSH relies on a roster to obtain details such as hostname, ports, and the SSH parameters of a client.
 {productname} keeps these details in the database and makes them available to Salt by using `uyuni` roster module or by generating a temporary roster file on bootstrapping new clients with {webui} using Salt SSH call.
-The location of the temporary roster file is supplied to `salt-ssh` using the `--roster-file=` option.
-For registered clients `--roster=uyuni` is used instead.
+The location of the temporary roster file is supplied to `salt-ssh` using the [option]``roster-file`` option.
+For the registered clients [option]``roster`` set to `uyuni` is used instead to get the roster from the database with `uyuni` salt roster module.
 
 [IMPORTANT]
 ====
