Remove contact-methods-salt-cfgfile
(Client Configuration Guide / Client Management Methods /
Managing Salt Clients / Salt Minion Configuration File)

--- a/modules/client-configuration/pages/contact-methods-salt.adoc
+++ b/modules/client-configuration/pages/contact-methods-salt.adoc
@@ -8,7 +8,7 @@ In this environment, clients are located in a firewall-protected zone called DMZ
 For more information about Salt SSH contact method, see xref:client-configuration:contact-methods-saltssh.adoc[].
 
 If you need to manually configure a Salt client to connect to the {productname} Server, edit the Salt client configuration file with the correct network details.
-For more information about Salt minion configuration file contact method, see xref:client-configuration:contact-methods-salt-cfgfile.adoc[].
+For more information about Salt minion configuration file contact method, see xref:client-configuration:registration-cli.adoc[].
 
 [[onboarding-details]]
 == Onboarding Details
