Move registration-methods-saltbundle contact-methods-saltbundle
(Client Configuration Guide \ Client Registration \ Registration Methods \ Register with Salt Bundle ->
Client Configuration Guidei \ Client Management Methods \ Managing Salt Clients)

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -38,6 +38,7 @@ endif::[]
 ** xref:contact-methods-intro.adoc[Client Management Methods]
 *** xref:contact-methods-salt.adoc[Managing Salt Clients]
 **** xref:contact-methods-saltssh.adoc[Push via Salt SSH]
+**** xref:contact-methods-saltbundle.adoc[Salt Bundle]
 *** xref:contact-methods-traditional.adoc[Managing Traditional Clients]
 **** xref:contact-methods-rhnsd.adoc[rhnsd]
 ***** xref:contact-methods-osad.adoc[OSAD]
@@ -49,7 +50,6 @@ endif::[]
 **** xref:registration-webui.adoc[Register with the Web UI]
 **** xref:registration-bootstrap.adoc[Register with Bootstrap Script]
 **** xref:registration-cli.adoc[Register on the Command Line]
-**** xref:registration-methods-saltbundle.adoc[Register with Salt Bundle]
 // SUSE Client Registration
 *** xref:registration-overview-suse.adoc[SUSE Client Registration]
 **** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
