--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -1,5 +1,5 @@
-[[registration-methods-saltbundle]]
-= Client Registration with Salt Bundle
+[[contact-methods-salt]]
+= Salt Bundle
 
 The registration method with the Salt bundle is the recommended registration method as long as it covers your use case.
 This section explains the advantages and limitations of the current implementation.
