--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -35,7 +35,7 @@ Salt Bundle ([package]``venv-salt-minion``)::
 * [path]``/etc/venv-salt-minion/minion.d/NAME.conf``
 * systemd service file: [path]``venv-salt-minion.service``
 
-For more information about the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[Register with Salt Bundle].
+For more information about the Salt bundle, see xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle].
 
 
 
