New content for automatic clients registration.

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -100,6 +100,7 @@ endif::[]
 **** xref:client-proxy-script.adoc[Register to a Proxy with a Script]
 // Public Cloud Clients
 *** xref:clients-pubcloud.adoc[Public Cloud Clients]
+**** xref:automatic-clients-registration.adoc[Automatic Clients Registration]
 // Upgrades
 ** xref:client-upgrades.adoc[Client Upgrades]
 *** xref:client-upgrades-major.adoc[Client - Major Version Upgrade]
