--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -1,5 +1,5 @@
-[[automatic-clients-registration]]
-= Automatic Clients Registration
+[[automatic-client-registration]]
+= Automatic Client Registration
 
 
 Newly created public cloud clients can be automatically registered to {productname}.
@@ -9,8 +9,8 @@ Newly created public cloud clients can be automatically registered to {productna
 * cloud-init based registration
 * remote execution provisioner based regsitration
 
-
-== Cloud-init based registration
+[[cloud-init-based-client-registration]]
+== cloud-init based client registration
 
 Registering by leveraging cloud-init is the preferred way of automatic registering of the newly created public cloud clients. 
 This solution avoids configuring SSH connection to the host.
@@ -43,18 +43,23 @@ For a cloud-init example, see:
 
 
 
-== remote-exec Provisioner
+[[remote-exec-provisioner-based-client-registration]]
+== remote-exec provisioner based registration
 
 The second solution for automatic registering of the  newly created public cloud uses Terraform's remote-exec provisioner.
 
 remote-exec provisioner interacts with the newly created machines. 
 It has access to open and SSH connections, and can run single or batch commands.
 
-Before using remote-exec provisioner to register clients, the user must configure:
+[IMPORTANT]
+====
+Before using remote-exec provisioner to register clients, the user must configure SSH connection between the machine running Terraform, and the recently created machine. 
+====
 
-* Open SSH connection between the machine running Terraform, and the recently created machine. 
-* Bootstrap script (the same way as defined in the cloud-init section)
-* Activation keys 
+The remaining requirements are the same as when using <<cloud-init-based-client-registration>> 
+
+* Bootstrap script. See xref:client-configuration:registration-bootstrap.adoc[]
+* Activation keys. See xref:client-configuration:activation-keys.adoc[]
 
 
 This command will download the bootstrap script and register the new machine when it is created:
