--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -100,7 +100,7 @@ endif::[]
 **** xref:client-proxy-script.adoc[Register to a Proxy with a Script]
 // Public Cloud Clients
 *** xref:clients-pubcloud.adoc[Public Cloud Clients]
-**** xref:automatic-client-registration.adoc[Automatic Client Registration]
+**** xref:automatic-client-registration.adoc[Automatic Registration of Clients Created by Terraform]
 // Upgrades
 ** xref:client-upgrades.adoc[Client Upgrades]
 *** xref:client-upgrades-major.adoc[Client - Major Version Upgrade]
