--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -2,9 +2,9 @@
 = Automatic Client Registration
 
 
-Newly created public cloud clients can be automatically registered to {productname}.
+Newly created clients created by Terraform can be automatically registered to {productname}.
 
-{productname} supports two ways of registering new cloud VMs:
+{productname} supports two ways of registering new virtual machines created by Terraform:
 
 * cloud-init based registration
 * remote execution provisioner based regsitration
@@ -46,14 +46,14 @@ For a cloud-init example, see:
 [[remote-exec-provisioner-based-client-registration]]
 == remote-exec provisioner based registration
 
-The second solution for automatic registering of the  newly created public cloud uses Terraform's remote-exec provisioner.
+The second solution for automatic registering of the  newly created virtual machines uses Terraform's remote-exec provisioner.
 
 remote-exec provisioner interacts with the newly created machines. 
-It has access to open and SSH connections, and can run single or batch commands.
+It opens an SSH connection and can run commands on that machine.
 
 [IMPORTANT]
 ====
-Before using remote-exec provisioner to register clients, the user must configure SSH connection between the machine running Terraform, and the recently created machine. 
+When using remote-exec provisioner to register clients, the user must ensure that the machine running Terraform will have access to the new virtual machine after is creation.
 ====
 
 The remaining requirements are the same as when using <<cloud-init-based-client-registration>> 
