--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -16,7 +16,7 @@ Registering by leveraging cloud-init is the preferred way of automatic registeri
 This solution avoids configuring SSH connection to the host.
 It can be used regardless of the tool used for clients creation. 
 
-User can pass the set of user data when deploying the image, in order to create the image instance.
+User can pass the set of user data when deploying the image with Terraform, in order to create the image instance.
 [literal]```user_data``` is run only once at bootstrap, and only the first time the instance is started. 
 
 Before using cloud-init to register clients, the user must configure:
@@ -53,7 +53,7 @@ It opens an SSH connection and can run commands on that machine.
 
 [IMPORTANT]
 ====
-When using remote-exec provisioner to register clients, the user must ensure that the machine running Terraform will have access to the new virtual machine after is creation.
+When using remote-exec provisioner to register clients, the user must ensure that the machine running Terraform will have access to the new virtual machine after its creation.
 ====
 
 The remaining requirements are the same as when using <<cloud-init-based-client-registration>> 
