--- a/modules/retail/pages/snippets/add_channels_wizard.adoc
+++ b/modules/retail/pages/snippets/add_channels_wizard.adoc
@@ -1,6 +1,7 @@
 .Procedure: Adding Software Channels
 . In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > Products].
 . Locate the appropriate products for your client operating system and architecture using the search bar, and check the appropriate product.
-  This will automatically check all required channels.
+  This will automatically check all mandatory channels.
+  Depending on your usecase, also check the optional Client Tools Channel.
   Click the arrow to see the complete list of related products, and ensure that any extra products you require are checked.
 . Click btn:[Add Products] and wait until the products have finished synchronizing.
