--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -1,8 +1,8 @@
 [[automatic-client-registration]]
-= Automatic Client Registration
+= Automatic Registration of Clients Cretaed by Terraform
 
 
-Newly created clients created by Terraform can be automatically registered to {productname}.
+New clients created by Terraform can be automatically registered to {productname}.
 
 {productname} supports two ways of registering new virtual machines created by Terraform:
 
