--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -12,12 +12,12 @@ New clients created by Terraform can be automatically registered to {productname
 [[cloud-init-based-client-registration]]
 == cloud-init based client registration
 
-Registering by leveraging cloud-init is the preferred way of automatic registering of the newly created public cloud clients. 
+Registering by leveraging cloud-init is the preferred way of automatic registering of the newly created virtual machines. 
 This solution avoids configuring SSH connection to the host.
 It can be used regardless of the tool used for clients creation. 
 
 User can pass the set of user data when deploying the image with Terraform, in order to create the image instance.
-[literal]```user_data``` is run only once at bootstrap, and only the first time the instance is started. 
+[path]``user_data`` is run only once at bootstrap, and only the first time the instance is started. 
 
 Before using cloud-init to register clients, the user must configure:
 
@@ -32,7 +32,7 @@ curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 
 [NOTE]
 ====
-Anytime [literal]```user_data``` is updated to change the provisioning, Terraform will destroy and then recreate the machines with new IP etc.
+Anytime [path]``user_data`` is updated to change the provisioning, Terraform will destroy and then recreate the machines with new IP etc.
 ====
 
 For more information about cloud-init on AWS, see:  
