Squash suggestions by @meaksh and @agraul
Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>
Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/registration-bootstrap.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/specialized-guides/pages/salt/salt-ssh.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/re

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -5,21 +5,21 @@
 
 The Salt Bundle is a single binary package containing Salt Minion, Python 3, required Python modules and libraries.
 
-As the Salt Bundle is shipped with Python 3 and all the requirements for Salt. The Bundle is not using the Python installed on the system, so it can be installed on the client which doesn't meet the requirements for Salt version.
+As the Salt Bundle is shipped with Python 3 and all the requirements for Salt to run, the Salt Bundle is not using the Python version coming from the system, so it can be installed on clients which doesn't meet the requirements for a given Salt version.
 
-It is also possible to install Salt Bundle on the system where Salt Minion is used already to manage the client by the Salt Master other than {productname} Server.
+It is also possible to install Salt Bundle on the system where Salt Minion is being used already to manage that client by the different Salt Master than the {productname} Server.
 
 == Client Registration with Salt Bundle as a Minion
 
 The registration method with the Salt bundle is the recommended registration method as long as it covers your use case.
 This section explains the advantages and limitations of the current implementation.
-The Salt bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python, and the Python modules Salt depends on.
+The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python 3, and the Python modules Salt depends on.
 Bootstrapping with {webui} is using Salt bundle as well, so bootstrapping with {webui} is not Python dependant.
-Using the Salt bundle, it is no longer needed that the client provides the required Python version or any Python modules.
+Using the Salt Bundle, it is no longer needed that the client provides any Python interpreter or modules.
 
-If you bootstrap new clients, registration with the Salt bundle is the default method.
-You can switch existing clients to the Salt bundle method.
-If you switch, the [package]``salt-minion`` package and its Python version and the Python modules will stay installed.
+If you bootstrap new clients, registration with the Salt Bundle is the default method.
+You can switch existing clients to the Salt Bundle method.
+If you switch, the [package]``salt-minion`` package and its dependencies will stay installed.
 
 === Switching from Salt Minion to Salt Bundle
 
@@ -42,8 +42,8 @@ This second step repeats the first step, and then removes the old configuration 
 salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{"mgr_purge_non_venv_salt_files": True, "mgr_purge_non_venv_salt": True}'
 ----
 
-On the other hand, it is also possible to avoid installing the Salt bundle and keep using [package]``salt-minion`` instead.
-In this case specify one of these options:
+On the other hand, it is also possible to avoid installing the Salt Bundle and keep using [package]``salt-minion`` instead.
+In this case, specify one of these options:
 
 * Execute [command]``mgr-bootstrap`` with  [option]``--no-bundle`` option.
 * Set [literal]``AVOID_VENV_SALT_MINION`` to [literal]``1`` in the generated bootstrap script.
@@ -51,9 +51,9 @@ In this case specify one of these options:
 
 == Salt SSH with the Salt Bundle
 
-The Salt Bundle is also used to handle Salt SSH session on the client side.
+The Salt Bundle is also used when performing Salt SSH actions to clients.
 
-The pre flight script is deploying the Salt Bundle on the client without installing the package. Original `salt-thin` method is not used in this case.
+A shell script deploys the Salt Bundle onto the target system without installing [package]``venv-salt-minion`` before any Salt command is executed. Since the Salt Bundle contains the whole Salt code base, no [literal]``salt-thin`` is deployed. Salt SSH (including bootstrapping using the {webui}) uses the Python 3 interpreter within the bundle. The target system does not need to have any other Python interpreter installed.
 
 Salt API is calling Python 3 deployed with the Bundle to handle Salt SSH session on the client, so Salt SSH (including bootstrapping with {webui}) is not dependant on Python installed on the system.
 
@@ -66,7 +66,7 @@ For more information, see xref:client-configuration:bootstrap-repository.adoc#_p
 [NOTE]
 ====
 Using `salt-thin` can be enabled as a fallback method, but it requires Python 3 to be installed on the client.
-This method is not recommended and supported and can be used for development purposes only.
+This method is not recommended nor supported and exists for development purposes only.
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
 ====
 
