--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -4,12 +4,12 @@
 Registering clients with the {productname} {webui} works for Salt clients only.
 
 If you are bootstrapping Salt clients using the {webui}, it is using xref:specialized-guides:salt/salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
-Salt bundle is used to handle Salt-SSH session on the client, so it is not Python dependant as Python is shipped with the bundle.
+Salt SSH uses the Salt Bundle and its included Python interpreter. Therefore, no other Python interpreter needs to be installed on the client.
 
 [IMPORTANT]
 ====
-As Salt bundle is shipped with the bootstrap repository, the repository must be created before executing bootstrap process for the client.
-Pre flight script is detecting the OS version on the client and selects proper bootstrap repo the same way as bootstrap script does.
+As Salt Bundle is shipped with the bootstrap repository, the repository must be created before starting the bootstrap process for the client.
+A shell script detects the operating system on the client and deploys the Salt Bundle from the appropriate bootstrap repository, using the same logic as the bootstrap script.
 For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository].
 ====
 
