--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -27,13 +27,13 @@ Use this method for in-place firewall environments that block HTTP or HTTPS conn
 As with all Salt calls, {productname} invokes `salt-ssh` via the `salt-api`.
 
 Salt SSH relies on a roster to obtain details such as hostname, ports, and the SSH parameters of a client.
-{productname} keeps these details in the database and makes them available to Salt by using `uyuni` roster module or by generating a temporary roster file on bootstrapping new clients with {webui} using Salt SSH call.
+{productname} keeps these details in the database and makes them available to Salt SSH by using the [literal]``uyuni`` roster module, or by generating a temporary roster file on bootstrapping new clients with the {webui}.
 The location of the temporary roster file is supplied to `salt-ssh` using the [option]``roster-file`` option.
 For the registered clients [option]``roster`` set to `uyuni` is used instead to get the roster from the database with `uyuni` salt roster module.
 
 [IMPORTANT]
 ====
-It is not recommended to use [command]``salt-ssh`` as the call will be processed with current user permissions and in case of calling it with `root` user can cause permission issues for the files on processing next calls with `salt-api`.
+It is not recommended to run [command]``salt-ssh`` as [literal]``root`` user. This can cause permission issues the next time {productname} tries to use Salt SSH.
 Use [command]``mgr-salt-ssh`` instead because it is changing effective user to `salt` on each call.
 If you want to use it with a user other than `root`, the user should have the permission to change effective user to `salt`.
 ====
@@ -128,7 +128,7 @@ The roster content contains:
 * `timeout`: defaults to 180 seconds
 * `minion_opts`:
 ** `master`: Set to the minion ID if the contact method is `ssh-push-tunnel`
-* `ssh_pre_flight`: The path to the pre flight shell script
+* `ssh_pre_flight`: The path to the shell script executed on the client before running any Salt command
 * `ssh_pre_flight_args`: The list of arguments to call the pre flight script on the client
 
 
