--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -4,7 +4,7 @@
 
 New clients created by Terraform can be automatically registered to {productname}.
 
-{productname} supports two ways of registering new virtual machines created by Terraform:
+This can be achieved in two ways:
 
 * cloud-init based registration
 * remote execution provisioner based regsitration
@@ -14,10 +14,10 @@ New clients created by Terraform can be automatically registered to {productname
 
 Registering by leveraging cloud-init is the preferred way of automatic registering of the newly created virtual machines. 
 This solution avoids configuring SSH connection to the host.
-It can be used regardless of the tool used for clients creation. 
+It can also be used regardless of the tool used for clients creation. 
 
 User can pass the set of user data when deploying the image with Terraform, in order to create the image instance.
-[path]``user_data`` is run only once at bootstrap, and only the first time the instance is started. 
+[path]``user_data`` is run only once at bootstrap, and only the first time the machine is started. 
 
 Before using cloud-init to register clients, the user must configure:
 
@@ -62,7 +62,7 @@ The remaining requirements are the same as when using <<cloud-init-based-client-
 * Activation keys. See xref:client-configuration:activation-keys.adoc[]
 
 
-This command will download the bootstrap script and register the new machine when it is created:
+This command will download the bootstrap script and register the new machine when it is created, , and should be defined as the remote command to run:
 ----
 curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 ----
