--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -16,7 +16,7 @@ Registering by leveraging cloud-init is the preferred way of automatic registeri
 This solution avoids configuring SSH connection to the host.
 It can also be used regardless of the tool used for clients creation. 
 
-User can pass the set of user data when deploying the image with Terraform, in order to create the image instance.
+User can pass the set of user data when deploying the image with Terraform, in order to automatically register the machine to {productname}.
 [path]``user_data`` is run only once at bootstrap, and only the first time the machine is started. 
 
 Before using cloud-init to register clients, the user must configure:
