--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -25,7 +25,7 @@ Before using cloud-init to register clients, the user must configure:
 * Activation keys. See xref:client-configuration:activation-keys.adoc[]
 
 
-This command will download the bootstrap script and register the new machine when it is created:
+This command will download the bootstrap script and register the new machine when it is created and should be added to the cloud-init configuration:
 ----
 curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 ----
