--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -1,5 +1,5 @@
 [[automatic-client-registration]]
-= Automatic Registration of Clients Cretaed by Terraform
+= Automatic Registration of Clients Created by Terraform
 
 
 New clients created by Terraform can be automatically registered to {productname}.
