--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -3,8 +3,7 @@
 
 
 New clients created by Terraform can be automatically registered to {productname}.
-
-This can be achieved in two ways:
+Registration can be achieved in two ways:
 
 * cloud-init based registration
 * remote execution provisioner based regsitration
