--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -5,7 +5,7 @@
 New clients created by Terraform can be automatically registered to {productname}.
 Registration can be achieved in two ways:
 
-* cloud-init based registration
+* [command]``cloud-init`` based registration
 * remote execution provisioner based regsitration
 
 [[cloud-init-based-client-registration]]
