--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -6,7 +6,7 @@ New clients created by Terraform can be automatically registered to {productname
 Registration can be achieved in two ways:
 
 * [command]``cloud-init`` based registration
-* remote execution provisioner based regsitration
+* remote execution provisioner based registration
 
 [[cloud-init-based-client-registration]]
 == cloud-init based client registration
