--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -12,7 +12,7 @@ Registration can be achieved in two ways:
 == cloud-init based client registration
 
 Registering by leveraging cloud-init is the preferred way of automatic registering of the newly created virtual machines. 
-This solution avoids configuring SSH connection to the host.
+This solution avoids configuring an SSH connection to the host.
 It can also be used regardless of the tool used for clients creation. 
 
 User can pass the set of user data when deploying the image with Terraform, in order to automatically register the machine to {productname}.
