--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -31,7 +31,7 @@ curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 
 [NOTE]
 ====
-Anytime [path]``user_data`` is updated to change the provisioning, Terraform will destroy and then recreate the machines with new IP etc.
+Anytime [path]``user_data`` is updated to change the provisioning, Terraform will destroy and then recreate the machines with a new IP, etc.
 ====
 
 For more information about cloud-init on AWS, see:  
