--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -61,7 +61,8 @@ The remaining requirements are the same as when using <<cloud-init-based-client-
 * Activation keys. See xref:client-configuration:activation-keys.adoc[]
 
 
-This command will download the bootstrap script and register the new machine when it is created, , and should be defined as the remote command to run:
+This command will download the bootstrap script and register the new machine when it is created.
+It should be defined as the remote command to run:
 ----
 curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 ----
