--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -5,7 +5,7 @@
 New clients created by Terraform can be automatically registered to {productname}.
 Registration can be achieved in two ways:
 
-* [command]``cloud-init`` based registration
+* cloud-init based registration
 * remote execution provisioner based registration
 
 [[cloud-init-based-client-registration]]
@@ -24,7 +24,8 @@ Before using cloud-init to register clients, the user must configure:
 * Activation keys. See xref:client-configuration:activation-keys.adoc[]
 
 
-This command will download the bootstrap script and register the new machine when it is created and should be added to the cloud-init configuration:
+This command will download the bootstrap script and register the new machine when it is created. 
+It should be added to the cloud-init configuration:
 ----
 curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 ----
