--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -98,6 +98,7 @@ endif::[]
 **** xref:client-proxy-script.adoc[Register to a Proxy with a Script]
 // Public Cloud Clients
 *** xref:clients-pubcloud.adoc[Public Cloud Clients]
+**** xref:automatic-client-registration.adoc[Automatic Registration of Clients Created by Terraform]
 // Delete clients
 ** xref:delete-clients.adoc[Delete Clients]
 // Automated Installation
