--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -6,6 +6,7 @@ This section contains information about registering clients running these {sle} 
 * {sles}{nbsp}15{nbsp}SP1
 * {sles}{nbsp}15{nbsp}SP2
 * {sles}{nbsp}15{nbsp}SP3
+* {sles}{nbsp}15{nbsp}SP4
 
 ////
 * {sles}{nbsp}12{nbsp}SP5
@@ -51,6 +52,8 @@ The products you need for this procedure are:
 | {sles} 15 SP3
 | SUSE Linux Enterprise Server 15 SP3 x86_64
 
+| {sles} 15 SP4
+| SUSE Linux Enterprise Server 15 SP4 x86_64
 |===
 
 
@@ -76,6 +79,8 @@ The channels you need for this procedure are:
 | {sles} 15 SP3
 | sle-product-sles15-sp3-pool-x86_64
 
+| {sles} 15 SP4
+| sle-product-sles15-sp4-pool-x86_64
 |===
 
 [NOTE]
@@ -119,6 +124,9 @@ To add the client tools, add these channels from the command prompt:
 
 | {sles} 15 SP3
 | sles15-sp3-uyuni-client
+
+| {sles} 15 SP4
+| sles15-sp4-uyuni-client
 |===
 
 
