--- a/modules/installation-and-upgrade/pages/proxy-y-z.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-y-z.adoc
@@ -7,8 +7,8 @@ For more information about maintenance windows, see xref:administration:maintena
 
 [IMPORTANT]
 ====
-When upgrading {productname} Proxy 4.0, ignore the option to upgrade it to version 4.1 as target product.
-Always select to upgrade {productname} Proxy 4.0 to {productname} Proxy 4.2 only.
+When upgrading {productname} Proxy 4.0, ignore the option to upgrade it to version 4.1 or 4.2 as target product.
+Always select to upgrade {productname} Proxy 4.0 to {productname} Proxy 4.3 only.
 ====
 
 
