Get rid of mentioning Salt API, suggested by @meaksh

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -55,7 +55,7 @@ The Salt Bundle is also used when performing Salt SSH actions to clients.
 
 A shell script deploys the Salt Bundle onto the target system without installing [package]``venv-salt-minion`` before any Salt command is executed. Since the Salt Bundle contains the whole Salt code base, no [literal]``salt-thin`` is deployed. Salt SSH (including bootstrapping using the {webui}) uses the Python 3 interpreter within the bundle. The target system does not need to have any other Python interpreter installed.
 
-Salt API is calling Python 3 deployed with the Bundle to handle Salt SSH session on the client, so Salt SSH (including bootstrapping with {webui}) is not dependant on Python installed on the system.
+The Python 3 deployed with the Bundle is used to handle Salt SSH session on the client, so Salt SSH (including bootstrapping with {webui}) is not dependant on Python installed on the system.
 
 [IMPORTANT]
 ====
