Some rephrasing and additions to contact-methods-saltbundle

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -7,14 +7,14 @@ The Salt Bundle is a single binary package containing Salt Minion, Python 3, req
 
 As the Salt Bundle is shipped with Python 3 and all the requirements for Salt to run, the Salt Bundle is not using the Python version coming from the system, so it can be installed on clients which doesn't meet the requirements for a given Salt version.
 
-It is also possible to install Salt Bundle on the system where Salt Minion is being used already to manage that client by the different Salt Master than the {productname} Server.
+It is also possible to use the Salt Bundle on systems that run a Salt Minion connected to a Salt Master other than {poductname} Salt Master.
 
 == Client Registration with Salt Bundle as a Minion
 
-The registration method with the Salt bundle is the recommended registration method as long as it covers your use case.
+The registration method with the Salt Bundle is the recommended registration method as long as it covers your use case.
 This section explains the advantages and limitations of the current implementation.
 The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python 3, and the Python modules Salt depends on.
-Bootstrapping with {webui} is using Salt bundle as well, so bootstrapping with {webui} is not Python dependant.
+Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {webui} is not Python dependant.
 Using the Salt Bundle, it is no longer needed that the client provides any Python interpreter or modules.
 
 If you bootstrap new clients, registration with the Salt Bundle is the default method.
@@ -36,11 +36,16 @@ It is recommended to switch to [package]``venv-salt-minion`` in two steps to avo
 salt <minion_id> state.apply util.mgr_switch_to_venv_minion
 ----
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with [literal]``mgr_purge_non_venv_salt`` set to [literal]``True`` to remove [package]``salt-minion`` and with [literal]``mgr_purge_non_venv_salt_files`` set to [literal]``True`` to remove all the files related to [package]``salt-minion``.
-This second step repeats the first step, and then removes the old configuration files and the now obsolete [package]``salt-minion`` package.
+This second step ensures the first step was processed, and then removes the old configuration files and the now obsolete [package]``salt-minion`` package.
 +
 ----
 salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{"mgr_purge_non_venv_salt_files": True, "mgr_purge_non_venv_salt": True}'
 ----
+
+[WARNING]
+====
+In case of running the second step of switching with skipping the first step, state apply process could fail as it requires stopping the [systemitem]``salt-minion`` which is used to execute the command on the client side.
+====
 
 On the other hand, it is also possible to avoid installing the Salt Bundle and keep using [package]``salt-minion`` instead.
 In this case, specify one of these options:
